<resources>
    <string name="app_name">PetShop App</string>
    <string name="entrar">Entrar</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_usu_rio">Digite seu usuário</string>
    <string name="password">Senha</string>
    <string name="username">Usuário</string>
    <string name="user_name">USER NAME</string>
    <string name="usu_rio">Usuário</string>
    <string name="e_mail">E-mail</string>
    <string name="digite_seu_email">Digite seu Email</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="profile_pic">profile_pic</string>
    <string name="icon_login">Icon_login</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="digite_string_digite_seu_email">Digite seu Email</string>
    <string name="email_logo">Email_Logo</string>
    <string name="enviar">Enviar</string>
    <string name="um_email_de_recupera_o_ser_enviado">Uma mensagem de recuperação será enviada.</string>
    <string name="nome_usuario">nome_usuario</string>
    <string name="sobrenome_usuario">sobrenome_usuario</string>
    <string name="cpf_usuario">cpf_usuario</string>
    <string name="profilepic">profilePIC</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="raca">Raca</string>
    <string name="_05_06_2018">05/06/2018</string>
    <string name="ultima_consulta">Ultima Consulta:</string>
    <string name="sexo">Sexo</string>
    <string name="_23_10_2018">23/10/2018</string>
    <string name="ultima_vacina">Ultima Vacina:</string>
    <string name="sair">Sair</string>
    <string name="hist_rico_de_vacinas">Histórico de Vacinas</string>
    <string name="hist_rico_consultas">Histórico Consultas</string>
    <string name="vacina">Vacina</string>
    <string name="antirr_bica">Antirrábica</string>
    <string name="data_de_aplica_o">Data de Aplicação:</string>
    <string name="tipo_da_vacina">Tipo da Vacina:</string>
    <string name="nome_vet">Nome_Vet</string>
    <string name="veterin_rio">Veterinário:</string>
    <string name="crmv">CRMV:</string>
    <string name="crmv_vet">CRMV_vet</string>
    <string name="coment_rio">Comentário</string>
    <string name="coment_rio_do_veterin_rio">Comentário do Veterinário</string>
    <string name="data_da_consulta">Data da Consulta</string>
    <string name="consulta">Consulta</string>
    <string name="motivo">Motivo</string>
    <string name="mensal">Mensal</string>
    <string name="rotina">Rotina</string>

</resources>
